# bigearthnet_common

./: .autorc  .buildinfo  .gitignore  00_constants.html  05_base.html  10_sets.html  15_example_data.html  CHANGELOG.md  LICENSE  Makefile  README.md  api.html  api_base.html  api_constant.html  api_example_data.html  api_sets.html  archive_bugs.md  docker-compose.yml  env.yml  genindex.html  intro.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  serve.py  settings.ini
.auto/: README.md  semvertool.sh  update_version.sh
.doctrees/: 00_constants.doctree  05_base.doctree  10_sets.doctree  15_example_data.doctree  api.doctree  api_base.doctree  api_constant.doctree  api_example_data.doctree  api_sets.doctree  environment.pickle  intro.doctree
.doctrees/general/: code_of_conduct.doctree  dependencies.doctree  license.doctree
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  config.yml
.github/workflows/: main.yml  pypi.yml  skip_test.yml  test.yml
_recs/: 00_constants-asciinema-0.rec  05_base-asciinema-0.rec  05_base-asciinema-1.rec  10_sets-asciinema-0.rec
_sources/: 05_base.md.txt  10_sets.md.txt  api.md.txt  api_constant.md.txt  api_sets.md.txt
bigearthnet_common/: __init__.py  _nbdev.py  base.py  constants.py  example_data.py  gdf_builder.py  s1_s2_mapping.csv.bz2  sets.py  subset_builder.py  test.csv.bz2  val.csv.bz2
docs/: 00_constants.ipynb  05_base.md  10_sets.md  15_example_data.md  _config.yml  _toc.yml  api.md  api_base.md  api_constant.md  api_example_data.md  api_sets.md  base.html  conf.py  constants.html  gdf_builder.html  index.html  intro.md  sets.html  sidebar.json  subset_builder.html
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
general/: code_of_conduct.html  dependencies.html  license.html
nbs/: 00_constants.ipynb  01_base.ipynb  01a_constants.ipynb  01b_base.ipynb  01c_gdf_builder.ipynb  01d_subset_builder.ipynb  02_sets.ipynb  bigearthnet_common  index.ipynb
nbs/S1_json_only/S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_40/: S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_40_labels_metadata.json
nbs/datasets/s1-tiny/S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_39/: S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_39_VH.tif  S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_39_VV.tif  S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_39_labels_metadata.json
nbs/datasets/s1-tiny/S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_40/: S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_40_VH.tif  S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_40_VV.tif
nbs/datasets/s1-tiny/S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_41/: S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_41_VH.tif  S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_41_VV.tif  S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_41_labels_metadata.json
nbs/datasets/tiny/S2A_MSIL2A_20180510T94033_19_86/: S2A_MSIL2A_20180510T94033_19_86_B01.tif  S2A_MSIL2A_20180510T94033_19_86_B02.tif  S2A_MSIL2A_20180510T94033_19_86_B03.tif  S2A_MSIL2A_20180510T94033_19_86_B04.tif  S2A_MSIL2A_20180510T94033_19_86_B05.tif  S2A_MSIL2A_20180510T94033_19_86_B06.tif  S2A_MSIL2A_20180510T94033_19_86_B07.tif  S2A_MSIL2A_20180510T94033_19_86_B08.tif  S2A_MSIL2A_20180510T94033_19_86_B09.tif  S2A_MSIL2A_20180510T94033_19_86_B11.tif  S2A_MSIL2A_20180510T94033_19_86_B12.tif  S2A_MSIL2A_20180510T94033_19_86_B8A.tif  S2A_MSIL2A_20180510T94033_19_86_labels_metadata.json
nbs/datasets/tiny/S2B_MSIL2A_20170914T093029_32_39/: S2B_MSIL2A_20170914T093029_32_39_B01.tif  S2B_MSIL2A_20170914T093029_32_39_B02.tif  S2B_MSIL2A_20170914T093029_32_39_B03.tif  S2B_MSIL2A_20170914T093029_32_39_B04.tif  S2B_MSIL2A_20170914T093029_32_39_B05.tif  S2B_MSIL2A_20170914T093029_32_39_B06.tif  S2B_MSIL2A_20170914T093029_32_39_B07.tif  S2B_MSIL2A_20170914T093029_32_39_B08.tif  S2B_MSIL2A_20170914T093029_32_39_B09.tif  S2B_MSIL2A_20170914T093029_32_39_B11.tif  S2B_MSIL2A_20170914T093029_32_39_B12.tif  S2B_MSIL2A_20170914T093029_32_39_B8A.tif  S2B_MSIL2A_20170914T093029_32_39_labels_metadata.json
nbs/datasets/tiny/S2B_MSIL2A_20170924T093019_43_47/: S2B_MSIL2A_20170924T093019_43_47_B01.tif  S2B_MSIL2A_20170924T093019_43_47_B02.tif  S2B_MSIL2A_20170924T093019_43_47_B03.tif  S2B_MSIL2A_20170924T093019_43_47_B04.tif  S2B_MSIL2A_20170924T093019_43_47_B05.tif  S2B_MSIL2A_20170924T093019_43_47_B06.tif  S2B_MSIL2A_20170924T093019_43_47_B07.tif  S2B_MSIL2A_20170924T093019_43_47_B08.tif  S2B_MSIL2A_20170924T093019_43_47_B09.tif  S2B_MSIL2A_20170924T093019_43_47_B11.tif  S2B_MSIL2A_20170924T093019_43_47_B12.tif  S2B_MSIL2A_20170924T093019_43_47_B8A.tif  S2B_MSIL2A_20170924T093019_43_47_labels_metadata.json
nbs/datasets/tiny/S2B_MSIL2A_20170924T93021_41_29/: S2B_MSIL2A_20170924T93021_41_29_B01.tif  S2B_MSIL2A_20170924T93021_41_29_B02.tif  S2B_MSIL2A_20170924T93021_41_29_B03.tif  S2B_MSIL2A_20170924T93021_41_29_B04.tif  S2B_MSIL2A_20170924T93021_41_29_B05.tif  S2B_MSIL2A_20170924T93021_41_29_B06.tif  S2B_MSIL2A_20170924T93021_41_29_B07.tif  S2B_MSIL2A_20170924T93021_41_29_B08.tif  S2B_MSIL2A_20170924T93021_41_29_B09.tif  S2B_MSIL2A_20170924T93021_41_29_B11.tif  S2B_MSIL2A_20170924T93021_41_29_B12.tif  S2B_MSIL2A_20170924T93021_41_29_B8A.tif  S2B_MSIL2A_20170924T93021_41_29_labels_metadata.json
nbs/datasets/tiny/S2B_MSIL2A_20170927T094019_66_56/: S2B_MSIL2A_20170927T094019_66_56_B01.tif  S2B_MSIL2A_20170927T094019_66_56_B02.tif  S2B_MSIL2A_20170927T094019_66_56_B03.tif  S2B_MSIL2A_20170927T094019_66_56_B04.tif  S2B_MSIL2A_20170927T094019_66_56_B05.tif  (+8 more)
src/bigearthnet_common/: BigEarthNet-S1-Example.tar.bz2  BigEarthNet-S2-Example.tar.bz2  __init__.py  base.py  patches_with_cloud_and_shadow.csv.bz2  patches_with_no_19_class_targets.csv.bz2  patches_with_seasonal_snow.csv.bz2  sets.py  train.csv.bz2
tests/: __init__.py  test_base.py  test_constants.py  test_example_data.py  test_init.py  test_sets.py
tests/S1_json_only/S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_39/: S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_39_labels_metadata.json
tests/S1_json_only/S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_40/: S1A_IW_GRDH_1SDV_20170613T165043_33UUP_61_40_labels_metadata.json
(+39 files in other folders)
