[tool.poetry]
name = "bigearthnet_common"
version = "2.7.0"
description = "A collection of common tools to interact with the BigEarthNet dataset."
authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/kai-tub/bigearthnet_common"
repository = "https://github.com/kai-tub/bigearthnet_common"
documentation = "https://kai-tub.github.io/bigearthnet_common/"
keywords = ["ben", "bigearthnet", "script", "tools"]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
# Follow NEP-29
python = ">=3.8,<=3.10"
rich = "^10|^11|^12"
pydantic = "^1.8"
fastcore = "^1.3"
natsort = "^8"
appdirs = "^1.4"
# typer is only required for CLI interface, but can
# be listed as true dependency in my opinion
typer = "^0.4"
python-dateutil = "^2"
rich-click = {extras = ["typer"], version = "^1.3.2"}

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
# nbdev = "^1.1"
# 6.1.13/6.2 seem to be broken in combination with nbdev
# jupyter_client = "<6.1.13"
black = "*"
isort = "*"
numpy = "^1.20"
pytest = "^7.1.1"
Sphinx = "^4.5.0"
furo = "^2022.3.4"
livereload = "^2.6.3"
mypy = "^0.942"
sphinx-external-toc = "^0.2"
sphinxcontrib-mermaid = "^0.7.1"
myst-parser = {extras = ["linkify"], version = "^0.17.0"}
pre-commit = "^2.18.1"
ipykernel = "^6.12.1"
myst-nb = "^0.15.0"
jupyter = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-cli-recorder = "^0.1.5"

[tool.poetry.scripts]
ben_constant_prompt = "bigearthnet_common.constants:cli"
ben_build_csv_sets = "bigearthnet_common.sets:build_csv_sets_cli"
ben_validate_s1_root_dir = "bigearthnet_common.base:validate_ben_s1_root_directory_cli"
ben_validate_s2_root_dir = "bigearthnet_common.base:validate_ben_s2_root_directory_cli"
ben_describe_patch = "bigearthnet_common.base:describe_patch_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
